multi object edit makes blender crash #66366

Closed
opened 2019-07-03 10:20:03 +02:00 by Massimiliano Puliero · 9 comments

System Information
Operating system: Windows-7-6.1.7601-SP1 64 Bits
Graphics card: GeForce GTX 1070/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 430.86

Blender Version
Broken: version: 2.80 (sub 74), branch: master, commit date: 2019-07-02 22:33, hash: 50ccbe6bb2
Worked: blender-2.80.0-git.bbb3500c9716-windows64

Short description of error
in some specific cases multi edit make Blender crash

Exact steps for others to reproduce the error
open the attached file and select/deselect everything few times.
Here is a video on how to reproduce the bug.

https://www.dropbox.com/s/tb3zd1u6kqjk6g8/multi_bug.avi?dl=0

Thankyou

multiedit.blend

**System Information** Operating system: Windows-7-6.1.7601-SP1 64 Bits Graphics card: GeForce GTX 1070/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 430.86 **Blender Version** Broken: version: 2.80 (sub 74), branch: master, commit date: 2019-07-02 22:33, hash: `50ccbe6bb2` Worked: blender-2.80.0-git.bbb3500c9716-windows64 **Short description of error** in some specific cases multi edit make Blender crash **Exact steps for others to reproduce the error** open the attached file and select/deselect everything few times. Here is a video on how to reproduce the bug. https://www.dropbox.com/s/tb3zd1u6kqjk6g8/multi_bug.avi?dl=0 Thankyou [multiedit.blend](https://archive.blender.org/developer/F7563381/multiedit.blend)

Added subscriber: @MassimilianoPuliero

Added subscriber: @MassimilianoPuliero

Added subscriber: @WilliamReynish

Added subscriber: @WilliamReynish
Campbell Barton was assigned by William Reynish 2019-07-03 10:26:00 +02:00

I can confirm this crash here.

I can confirm this crash here.
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Member

BLI_assert failed: /blender/source/blender/gpu/intern/gpu_context.cpp:302, gpu_context_remove_batch(), at 'ctx'

1   raise                                                                 0x7ffff1bb1e75 
2   abort                                                                0x7ffff1b9c895 
3   gpu_context_remove_batch                   gpu_context.cpp        302  0x6c48671      
4   GPU_batch_vao_cache_clear                 gpu_batch.c            78   0x6c3b74b      
5   GPU_batch_clear                                      gpu_batch.c            141  0x6c3b9ae      
6   GPU_batch_discard                                  gpu_batch.c            151  0x6c3ba06      
7   DRW_mesh_batch_cache_dirty_tag    draw_cache_impl_mesh.c 2219 0x29705e4      
8   BKE_mesh_batch_cache_dirty_tag       mesh_runtime.c         253  0x1ebdf16      
9   BKE_object_data_select_update           object_update.c        382  0x1f042ea      
10  BKE_object_select_update                   object_update.c        399  0x1f04365

9ab0247b6e was still good, bisecting...

`BLI_assert failed: /blender/source/blender/gpu/intern/gpu_context.cpp:302, gpu_context_remove_batch(), at 'ctx'` ``` 1 raise 0x7ffff1bb1e75 2 abort 0x7ffff1b9c895 3 gpu_context_remove_batch gpu_context.cpp 302 0x6c48671 4 GPU_batch_vao_cache_clear gpu_batch.c 78 0x6c3b74b 5 GPU_batch_clear gpu_batch.c 141 0x6c3b9ae 6 GPU_batch_discard gpu_batch.c 151 0x6c3ba06 7 DRW_mesh_batch_cache_dirty_tag draw_cache_impl_mesh.c 2219 0x29705e4 8 BKE_mesh_batch_cache_dirty_tag mesh_runtime.c 253 0x1ebdf16 9 BKE_object_data_select_update object_update.c 382 0x1f042ea 10 BKE_object_select_update object_update.c 399 0x1f04365 ``` 9ab0247b6e was still good, bisecting...
Campbell Barton was unassigned by Philipp Oeser 2019-07-03 11:02:46 +02:00
Sergey Sharybin was assigned by Philipp Oeser 2019-07-03 11:02:46 +02:00
Member

Added subscriber: @ideasman42

Added subscriber: @ideasman42
Member

Looks like this is caused by 26e6bb3fa3, think this deserves high prio?

Looks like this is caused by 26e6bb3fa3, think this deserves high prio?

This issue was referenced by f990c23bcf

This issue was referenced by f990c23bcfb5cb72b53d2b3cc93062fd814eeebe

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#66366
No description provided.